# static-server

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yml
.github/workflows/: after-release-please.yml  publish.yml
src/: env.rs  lib.rs
src/http/: body.rs  builder.rs  health_check.rs  mod.rs  router.rs  server.rs
src/http/server/: builder.rs  handle.rs  mod.rs  request.rs
src/utils/: etag.rs  mod.rs  string.rs  thread.rs
