[package]
name = "static-server"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "server"

[features]
debug = ["essentials/dotenv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials", default-features = false, features = ["log", "panic"] }
gateway = { tag = "0.8.2", git = "https://github.com/majksa-dev/rust-gateway" }
io = { tag = "0.2.2", git = "https://github.com/majksa-dev/rust-io" }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
derive_more = "0.99.18"
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
rand = "0.8.5"
slab = "0.4.9"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.122"
envy = "0.4.2"
tokio = { version = "1.39.2", features = ["full"] }
async-trait = "0.1.80"
http = "1.1.0"

[dev-dependencies]
assert_fs = "1.1.2"
