[package]
name = "static-server"
version = "0.2.7"
edition = "2021"

[[bin]]
name = "server"

[features]
debug = ["essentials/dotenv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials = { tag = "0.3.7", git = "https://github.com/majksa-dev/rust-essentials", default-features = false, features = ["log", "panic"] }
gateway = { tag = "0.8.8", git = "https://github.com/majksa-dev/rust-gateway" }
io = { tag = "0.3.0", git = "https://github.com/majksa-dev/rust-io" }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
envy = "0.4.2"
tokio = { version = "1.39.2", features = ["full"] }
async-trait = "0.1.81"
http = "1.1.0"

[dev-dependencies]
assert_fs = "1.1.2"
